--- a/index_files/saved_resource.html
+++ b/index_files/saved_resource.html
@@ -1,8 +1,8 @@
 
-<!-- saved from url=(0104)file:///D:/bolckchain/ParaSwap/ParaSwap%20-%20Solving%20Liquidity%20for%20DeFi_files/saved_resource.html -->
+<!-- saved from url=(0011)about:blank -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
-      <script type="text/javascript" charset="utf-8" src="./frame.b8d9c7ff.js.下载"></script><script type="text/javascript" charset="utf-8" src="./vendor.befea0ad.js.下载"></script></head>
+      <script type="text/javascript" charset="utf-8" src="https://js.intercomcdn.com/frame.bd3143ba.js"></script><script type="text/javascript" charset="utf-8" src="https://js.intercomcdn.com/vendor.befea0ad.js"></script></head>
       <body>
       
     </body></html>
